manifests/java-backend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: rds-service
spec:
  type: ExternalName
  externalName: blog.ciqwmadez1ln.eu-north-1.rds.amazonaws.com
  ports:
    - port: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-backend
  labels:
    app: java-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-backend
  template:
    metadata:
      labels:
        app: java-backend
    spec:
      containers:
        - name: java-backend
          image: romannnn/social-media:backend
          imagePullPolicy: Always
          ports:
            - name: https
              containerPort: 8080
          resources:
            limits:
              cpu: 1
              memory: "2000Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: java-backend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "3600"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-north-1:351399952822:certificate/bc1510c6-1031-4986-99e9-beffea247609
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
  labels:
    app: java-backend
spec:
  type: LoadBalancer
  selector:
    app: java-backend
  ports:
    - protocol: TCP
      name: https
      port: 8080
      targetPort: 8080
      nodePort: 32730
