manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/scheme: internet-facing
    nginx.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-north-1:351399952822:certificate/bc1510c6-1031-4986-99e9-beffea247609
    nginx.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    nginx.ingress.kubernetes.io/ssl-redirect: '443'
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
  labels:
    app: angular-frontend
spec:
  tls:
    - hosts:
        - "*.socialmediaproject.net"
  rules:
    - http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: angular-frontend-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/scheme: internet-facing
    nginx.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-north-1:351399952822:certificate/bc1510c6-1031-4986-99e9-beffea247609
    nginx.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    nginx.ingress.kubernetes.io/ssl-redirect: '8080'
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
  labels:
    app: java-backend
spec:
  tls:
    - hosts:
        - "*.socialmediaproject.net"
  rules:
    - host: socialmediaproject.net
    - http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: angular-frontend-service
                port:
                  number: 8080
