manifests/libretranslate-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: libretranslate-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: libretranslate
  template:
    metadata:
      labels:
        app: libretranslate
    spec:
      containers:
        - name: libretranslate
          image: libretranslate/libretranslate
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: libretranslate-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-north-1:351399952822:certificate/bc1510c6-1031-4986-99e9-beffea247609
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
spec:
  type: LoadBalancer
  selector:
    app: libretranslate
  ports:
    - protocol: TCP
      name: https
      port: 5000
      targetPort: 5000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: libretranslate-ingress
  annotations:
    nginx.ingress.kubernetes.io/scheme: internet-facing
    nginx.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-north-1:351399952822:certificate/bc1510c6-1031-4986-99e9-beffea247609
    nginx.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    nginx.ingress.kubernetes.io/ssl-redirect: '5000'
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
    kubernetes.io/ingress.class: nginx
  labels:
     app: libretranslate
spec:
  tls:
    - hosts:
        - "*.socialmediaproject.net"
  rules:
    - host: socialmediaproject.net
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: libretranslate-service
                port:
                  number: 5000
